--- a/package.json
+++ b/package.json
@@ -9,17 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/roboto": "^5.0.12",
+    "@hookform/resolvers": "^3.3.4",
+    "@kubernetes/client-node": "^0.20.0",
+    "axios": "^1.6.8",
+    "clsx": "^2.1.0",
+    "next": "14.0.4",
+    "next-auth": "^4.24.6",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.50.1",
+    "react-icons": "^5.1.0",
+    "react-select": "^5.8.0",
+    "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.26.3",
+    "swr": "^2.2.5",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
