--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.0.12",
     "@fontsource/roboto": "^5.0.12",
     "@hookform/resolvers": "^3.3.4",
     "@kubernetes/client-node": "^0.20.0",
+    "@next/env": "^14.2.3",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.0.4",
     "next-auth": "^4.24.6",
     "react": "^18",
@@ -24,10 +27,12 @@
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.26.3",
+    "supabase": "^1.167.4",
     "swr": "^2.2.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
