--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.0",
     "multer": "^1.4.5-lts.1",
     "next": "14.0.4",
+    "next-video": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
