--- a/package.json
+++ b/package.json
@@ -13,13 +13,9 @@
     "@hookform/resolvers": "^3.3.4",
     "@kubernetes/client-node": "^0.20.0",
     "@next/env": "^14.2.3",
-    "@xterm/addon-fit": "^0.10.0",
-    "@xterm/xterm": "^5.5.0",
-    "axios": "^1.6.8",
     "clsx": "^2.1.0",
-    "multer": "^1.4.5-lts.1",
+    "framer-motion": "^11.2.10",
     "next": "14.0.4",
-    "next-video": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
@@ -28,14 +24,9 @@
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "react-tooltip": "^5.26.3",
-    "swr": "^2.2.5",
-    "ws": "^8.17.0",
-    "xterm": "^5.3.0",
-    "xterm-addon-fit": "^0.8.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
