--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/env": "^14.2.3",
     "clsx": "^2.1.0",
     "framer-motion": "^11.2.10",
+    "highlight.js": "^11.9.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
